# arc380_s24_RJL

./: Dockerfile  LICENSE  README.md  docker-compose.yml
assignments/Assignment3/: ARC380_Assignment3.py
assignments/Assignment4/: ARC380_Assignment4.py  test.py
assignments/Assignment5/: ARC380_Assignment5_helper.py  camera_test.py  capture_realsense_on_mac.py
assignments/FinalProject/: ARC380_Session18_Workshop_PcdFiltering_Solution.ipynb  Apr19.py  Final_Project.py  camera_test.py  restart.py  tower.json
ros_packages/abb_irb120_moveit_config/config/: abb_irb120_3_60.srdf
ros_packages/abb_irb120_moveit_config/launch/: demo.launch  moveit_planning_execution.launch
ros_packages/abb_irb120_support/meshes/irb120_3_60/collision/: link_1.stl  link_2.stl  link_3.stl
ros_packages/abb_irb120_support/urdf/: irb120_3_60.xacro  irb120_3_60_macro.xacro
scripts/: ros_joint_state_listener.py
scripts/exercise_solutions/: hello_world_listener.py  hello_world_talker.py  ik_service.py
src/abb_irb120_gazebo/: package.xml
src/abb_irb120_gazebo/launch/: irb120_3_60_control.launch  irb120_gazebo.launch  load_irb120_3_60.launch
src/abb_irb120_gazebo/urdf/: irb120_3_60.xacro  irb120_3_60_macro.xacro
src/abb_irb120_moveit_config/: package.xml
src/abb_irb120_moveit_config/launch/: move_group.launch  moveit.rviz  moveit_planning_execution_gazebo.launch  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
src/abb_irb120_support/: CMakeLists.txt  package.xml
src/abb_irb120_support/launch/: load_irb120_3_60.launch  test_irb120_3_60.launch
src/abb_irb120_support/meshes/irb120_3_60/collision/: base_link.stl  link_4.stl  link_5.stl  link_6.stl
src/abb_irb120_support/meshes/irb120_3_60/visual/: base_link.dae  link_1.dae  link_2.dae  link_3.dae  link_4.dae  link_5.dae  link_6.dae
src/arc380_assignment3/: CMakeLists.txt  package.xml
src/arc380_assignment3/launch/: gazebo.launch  moveit.launch
src/arc380_assignment3/worlds/: assignment3_world.world
workshops/Session06/: ARC380_Session06_ROS.ipynb  docker-compose.yml
workshops/Session10/: compas_rrc_demo.py
