<?xml version="1.0"?>
<package format="2">
  <name>abb_irb120_support</name>
  <version>0.1.0</version>
  <description> Support files for ABB IRB120-3/0.6 </description>
  <author>Daniel Ruan (Princeton University)</author>
  <maintainer email="daniel.ruan@princeton.edu">Daniel Ruan (Princeton University)</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>abb_driver</exec_depend>
  <exec_depend>abb_resources</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
